# aiJockey

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AiJockey.md  HACKATHON.md  NEXT.TXT  README.md  STATUS.md  app.py  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-rocm.txt
docs/: HANDOFF.md  TEARDOWN_RUNBOOK.md  deploy_runbook.md  dj_research.md  feature_inventory.md  phase1_plan.md  tier1_upgrades.md
references/: README.md
samples/: README.md
scripts/: 00_imports_only.py  00_rocm_sanity.py  ace_step_pregrid.py  ace_step_register.py  aijockey_colab.ipynb  aijockey_env_check.ipynb  audiobox_slice_prescore.py  backfill_vocal_activity.py  baseline_renders.py  build_dpo_dataset.py  build_meme_manifest.py  build_style_rag_index.py  bulk_download_clips.py  clean_for_snapshot.sh  compress_dj_sets.py  cron_health_example.sh  diagnose_transitions.py  download_classical.py  download_diverse.py  download_indian.py  download_memes.py  dpo_director.py  fetch_via_hf_datasets.py  gen_featured_readme.py  iter_refine_batch.py  kokoro_pregen_phrasebook.py  kto_train.sh  mert_prescore.py  mix_grid_sweep.py  monitor.py  normalize_cache_tempos.py  pipeline_launch.sh  prebake_demos.py  prefetch_models.py  preflight.sh  probe_to_dpo.py  recover_clip_audio.py  render_demo_locked.sh  render_demo_set.sh  run_baseline.sh  (+23 more)
server/: DEPLOY_AMD.md  TUNNEL_RUNBOOK.md  __init__.py  api.py  boot.sh  joblog.py  preset.py  requirements.txt
space/: README.md  app.py
src/: acapella_overlay.py  ace_step_wrapper.py  all_in_one_wrapper.py  analyze.py  (+78 more)
(+42 files in other folders)
